# g

./: .gitconfig.example  BRANDING_TODO.md  Cargo.toml  IMPLEMENTATION_NOTES.md  Makefile.toml  README.md  TASK.raw.md  command-list.md  install-config.sh  test-commit.sh
.github/workflows/: ci.yml
src/: branch.rs  cli.rs  config.rs  fzf.rs  git.rs  main.rs  path.rs  repo.rs  repository.rs  worktree.rs
