[package]
name = "sonic-git"
version = "0.1.0"
edition = "2021"
description = "The fastest Git worktree manager - parallel branch workflow at sonic speed"
repository = "https://github.com/poi2/g"
license = "MIT"
keywords = ["git", "worktree", "cli", "speed", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "g"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
git2 = "0.19"
